fix icons and palette icons visibility in dark mode

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -652,6 +652,10 @@ div.multiselect {
       }
     }
   }
+
+  li span.swatch:not(.alabaster) {
+    border: 1px solid $dropdown-swatch-border-color;
+  }
 }
 
 .dropdown-search {
