--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -346,6 +346,8 @@ $dropdown-menu-separator-border-color: $ids-color-palette-graphite-30;
 $dropdown-box-shadow-top: 0 0 5px $drop-shadow-depth;
 $dropdown-readonly-icon-color: $ids-color-palette-graphite-40;
 
+$dropdown-swatch-border-color: transparent;
+
 // List View
 $listview-bg-color: $ids-color-palette-white;
 $listview-bg-color-alternate: $ids-color-palette-graphite-10;
